tests/files/type_checker_tests/should_pass/290.cmdr
//Test write statements type check
write "hi" to "hi.txt";
