tests/files/type_checker_tests/should_fail/200.cmdr
//Should fail write if not using strings
write 3 to "myfile.txt";
